--- a/config.json
+++ b/config.json
@@ -6,7 +6,7 @@
     "experimental": {
       "clash_api": {
         "external_controller": "127.0.0.1:9090",
-        "external_ui": "/home/martin/文档/singbox/ui",
+        "external_ui": "/home/martin/singbox/ui",
         "secret": "",
         "external_ui_download_url": "",
         "external_ui_download_detour": "",
